Added new info object to make handling of events more transparent.